<resources>
    <string name="app_name">FIRAT FÜZYON</string>
    <string name="slogan">Kampüs Ritmini Yakala</string>
    <string name="uyeGirisi">Üye Girişi</string>
    <string name="toplulukGirisi">Topluluk Girişi</string>
    <string name="baslık">Lorem Ipsum</string>
    <string name="acıklama">Lorem ipsum doldaesit amet, consecteturadipiscing elit, sed do eiusmod tempor inca.</string>
    <string name="girisYap">Giriş Yap</string>
    <string name="kullaniciAdi">Kullanıcı Adı</string>
    <string name="parola">Parola</string>
    <string name="sifremiUnuttum">Şifremi Unuttum</string>
    <string name="hesabınYokMu">Hesabın Yok Mu? Üye Ol</string>
    <string name="gizlilik">Gizlilik Ve Güvenlik Politikası</string>
    <string name="bizeUlasın">Bize Ulaşın</string>


</resources>